jobblo-argo-cd/base/jobblo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobblo
spec:
  selector:
    app: jobblo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
